Making rquests to gbif, rendering spaced circles

--- a/src/default.scss
+++ b/src/default.scss
@@ -6,3 +6,6 @@
 @import 'scss/theme.scss';
 
 @import 'scss/components/Main.scss';
+
+@import 'scss/components/Child.scss';
+@import 'scss/components/Rank.scss';
