--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -63,3 +63,11 @@
 {
   @include l-container;
 }
+
+
+.l-italic
+{
+  font-family: $font-secondary;
+  font-style: italic;
+  font-weight: normal
+}
