--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,4 +1,5 @@
 $font-main: 'Lato', sans-serif;
+$font-secondary: 'Playfair Display', sans-serif;
 
 $gutter: 16px;
 $gutter-mini: 12px;
@@ -19,8 +20,10 @@ $black: #000;
 $white: #fff;
 $black-transparent: rgba(0, 0, 0, 0.55);
 
+$light-shadow: 4px 4px 32px -12px rgba(0,0,0,0.32);
+
 $green-medium: #36964c;
-$green-faded: #f8fcf9;
+$green-faded: #edf7f0;
 
 $border-default: 2px solid;
 $border-thin: 1px solid;
